--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 <div class="container">
+  
+    <div class="rightSettings">
+        <app-font></app-font>
+        <app-theme></app-theme>
+    </div>
+
+    <div class="leftSettings">
+        <app-layout></app-layout>
+        <app-print></app-print>
+    </div>
+
     <app-home></app-home>
+  
 </div>
