--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -1,4 +1,4 @@
-::ng-deep :root {
+/* ::ng-deep :root {
     --width: 950px;
     --height: 1300px;
 
@@ -92,7 +92,7 @@
     font-family: font3Bold;
     src: url('./../../assets/font/font3/Manrope-Bold.ttf');
 
-}
+} */
 
 
 .EducationContainer {
